force-app/force-app/force-app/main/default/objects/Service_Request_Report__c/Service_Request_Report__c.object-meta.xml
<CustomObject>
    <label>Service Request Report</label>
    <nameField>
        <displayFormat>SRR-{0000}</displayFormat>
        <label>Service Request Report Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Request Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>