force-app/force-app/force-app/main/default/objects/Service_Request_Report__c/fields/More_Than_7_Days__c.field-meta.xml
<CustomField>
    <fullName>More_Than_7_Days__c</fullName>
    <label>More Than 7 Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>