force-app/force-app/force-app/main/default/objects/Service_Request_Report__c/fields/No_Of_Tasks_Assigned__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Tasks_Assigned__c</fullName>
    <label>No Of Tasks Assigned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>