force-app/force-app/force-app/main/default/objects/Service_Request_Report__c/fields/Within_1_Day__c.field-meta.xml
<CustomField>
    <fullName>Within_1_Day__c</fullName>
    <label>Within 1 Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>