force-app/force-app/force-app/main/default/objects/Service_Request_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Executive__c</columns>
    <columns>No_Of_Tasks_Assigned__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>